# LLMCoTAnalyzer

./: .gitignore  LLMManager.py  README.md  analysis_config.json  chatbot_demo.py  config.json  main.py  pyproject.toml  question_list.json  result_analysis.py  result_analysis_full.py  result_analysis_indicator.py  semantic_analysis.py  simulation.py  simulationGUI.py  simulation_config.json  textClassificationSupervised.py  tkScrollableWindow.py  tkTableView.py
