[project]
name = "apstatsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "joblib>=1.5.0",
    "loguru>=0.7.3",
    "numpy",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]
