[project]
name = "apstatsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deptry>=0.23.0",
    "loguru>=0.7.3",
    "numpy",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pywebview",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.1",
    "ttkbootstrap",
]
