[project]
name = "apstatsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.1.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pywebview",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.1",
    "ttkbootstrap",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]
